# context-engineering

./: .gitignore  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: deploy.yml
ch01/java/: pom.xml
ch01/jupyter/: openai-gpt-basic.ipynb
ch02/agent-skills/: README.md
ch02/java/: README.md  pom.xml
ch02/javascript/: README.md
ch02/jupyter/: README.md  anthropic_claude_system_prompt.ipynb  google_gemini_system_prompt.ipynb  ollama_local_system_prompt.ipynb  openai_gpt_system_prompt.ipynb
ch02/python/: README.md
ch02/python/instruction-artifacts/task-tracker/: AGENTS.md  CLAUDE.md  GEMINI.md  pyproject.toml
ch02/python/instruction-artifacts/task-tracker/src/task_tracker/: main.py
ch02/python/instruction-artifacts/task-tracker/tests/: test_main.py
ch03/jupyter/: vectorless_rag_pageindex.ipynb
ch03/python/: README.md
ch04/java/: README.md  build.gradle  pom.xml  settings.gradle
ch05/java/: README.md  pom.xml
ch06/java/: pom.xml
ch06/jupyter/: dspy_cot_vs_react.ipynb
ch07/a2a-example/: a2a_client.py  a2a_server.py  agent-card.json
ch07/a2a_example/: README.md  a2a_client.py
ch07/context-compression/: README.md  context_compression.py  requirements.txt
ch07/crewai-crew/: README.md  crew_example.py
ch07/deepagents-orchestration/: README.md  deep_agent_example.py  requirements.txt
ch07/multi-agent-router/: README.md  multi_agent_router.py
ch07/openviking-filesystem/: README.md  openviking_example.py  requirements.txt
docs/: context-aware-prompt-builder.html  references.json
vp-docs/: index.md
(+464 files in other folders)
