[project]
name = "task-tracker"
version = "0.1.0"
description = "A simple command-line task tracker"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
